	* src/dlvhex/StrongNegationPlugin.cpp: Likewise.

	* src/dlvhex/ASPSolver.cpp: Splitting ASPSolver.cpp into solver
	backend specific compilation units.
	* src/dlvhex/Makefile.am: Likewise.
	* src/dlvhex/ASPSolver_dlv.cpp: Likewise.
	* src/dlvhex/ASPSolver_libclingo.cpp: Likewise, and implemented
	threading for libclingo integration (similar to dlv threading).

2012-01-12  Peter Schueller  <ps@kr.tuwien.ac.at>

	* configure.ac: Using several configure switches for distcheck.

	* configure.ac: Extra tests if using --with-libclingo.
	* examples/Makefile.am: Likewise.
	* testsuite/Makefile.am: Likewise.
	* examples/tests/dlvhextests.test.in: Rename to basic.test.in.
	* examples/tests/basic.test.in: Collection of 'basic tests'.
	* examples/tests/libclingobackend.test.in: libclingo tests.

2012-01-11  Peter Schueller  <ps@kr.tuwien.ac.at>

	* configure.ac: Fixed wrong variable names.
	* include/dlvhex/Makefile.am: Fixed make distcheck.
	* examples/Makefile.am: Likewise.

	* include/dlvhex/Rule.hpp: Include guard fix.

	* m4/libcurl.m4: new upstream version from
	https://raw.github.com/bagder/curl/master/docs/libcurl/libcurl.m4
	* examples/tests/dlvhextests.test.in: Making dlvhextests.test a file built
	* examples/tests/dlvhextests.test: Likewise (remove).
	by configure.
	* configure.ac: Fixed some autoconf quoting warnings and replaced deprecated
	calls by other calls.

	* include/dlvhex/Interpretation.hpp: Added true-bit iteration interface.

	* include/dlvhex/ASPSolver.h: New method useInputProviderInput().
	* include/dlvhex/ASPSolverManager.h: Likewise.
	* src/dlvhex/ASPSolverManager.cpp: Likewise.
	* src/dlvhex/ASPSolver.cpp: Likewise.

	* include/dlvhex/Benchmarking.h: Mutex for profiling data.

	* include/dlvhex/ModelGenerator.hpp: Improved diagnosic messages.
	* src/dlvhex/WellfoundedModelGenerator.cpp: Likewise.
	* src/dlvhex/GuessAndCheckModelGenerator.cpp: Likewise.
	* src/dlvhex/DLVresultParserDriver.cpp: Likewise.